--- a/energin/index.html
+++ b/energin/index.html
@@ -1055,7 +1055,7 @@
       <div class="footer-bottom">
         <div class="auto-container">
           <div class="inner-container">
-            <div class="copyright-text">Energin Themes © 2023. All Rights Reserved.</div>
+            <div class="copyright-text"></div>
           </div>
         </div>
       </div>
